# portmon

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
aur/: PKGBUILD
src/: cli.rs  error.rs  main.rs
src/commands/: info.rs  kill.rs  list.rs  mod.rs  watch.rs
src/data/: collector.rs  mod.rs  process.rs  scanner.rs  types.rs
src/output/: json.rs  table.rs
src/tui/: actions.rs  app.rs  event.rs  keybindings.rs  mod.rs  theme.rs  ui.rs
src/tui/components/: detail.rs  dialog.rs  filter_bar.rs  help_bar.rs  mod.rs  status_bar.rs  table.rs
