[package]
name = "portmonitor"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }
futures = "0.3"

# System info
procfs = "0.17"
nix = { version = "0.29", features = ["signal", "user"] }
uzers = "0.12"

# Fuzzy matching
nucleo-matcher = "0.3"

# Clipboard
cli-clipboard = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI table output
tabled = "0.17"

# Error handling
anyhow = "1"
thiserror = "2"

# Open URLs
open = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
