[package]
name = "portmonitor"
version = "0.1.0"
edition = "2021"
description = "TUI + CLI port monitor for Linux — see what's listening, filter, sort, kill, and inspect processes"
license = "MIT"
repository = "https://github.com/JNC4/portmonitor"
readme = "README.md"
keywords = ["port", "network", "tui", "process", "monitor"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# TUI
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }
futures = "0.3"

# System info
procfs = "0.17"
nix = { version = "0.29", features = ["signal", "user"] }
uzers = "0.12"

# Clipboard
cli-clipboard = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI table output
tabled = "0.17"

# Error handling
anyhow = "1"
thiserror = "2"

# Open URLs
open = "5"
